feat: start edit deck
